--- a/workshop.html
+++ b/workshop.html
@@ -89,6 +89,7 @@
 								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
 								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
 								<li><a href="panel1.html">Panel 1</a> </li>
+								<li><a href="panel2.html">Panel 2</a> </li>
 							</ul>
 						</li>
 						<!--li><a href="keynote.html">Keynote Speech</a></li-->
@@ -96,7 +97,7 @@
 						<li><a href="location.html">Venue</a>
 							<ul>
 								<li><a href="accommodation.html">ACCOMMODATION</a> </li>
-								<li><a href="https://www.ncu.edu.tw/en/pages/show.php?top=1&num=56" target="_blank"
+								<li><a href="transportation.html"
 										style="display: block;">TRANSPORTATION to NCU</a> </li>
 								<li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank"
 										style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
