--- a/keynote.html
+++ b/keynote.html
@@ -180,7 +180,7 @@
 						<div class="separator line"></div>
 
 						<h3><strong>
-								<div style="color:purple">Envisioning AI Learning Companions
+								<div style="color:purple">From AI Companions for Learning to AI Companions for Global Harwell
 							</strong></h3>
 						<div class="separator small"></div>
 
@@ -200,65 +200,9 @@
 							mathematics and language arts learning.
 							<div class="separator"></div>
 
-							<!-- <h5><strong>Abstract</strong></h5>
-							<h6 class="morespace" style="text-align: justify;">Human lifespan is extended, but COVID-19
-								global death toll has exceeded 8 million (Our World in Data, 2023); digitization enables
-								all of us to connect and communicate, but we constantly quarrel over different beliefs;
-								online games immerse players, but children's addiction may become a learning disaster;
-								artificial companions (such as chatbots and robots) can do various kinds of work for us,
-								but they also replace many of our jobs; the advent of metaverse may represent a bright
-								future world, but it may also signal a dark abyss to come; artificial intelligence can
-								improve human life in the future, but it can also do stupid things to human beings; we
-								cheer for technological progress, but we worry about climate change, natural resource
-								depletion, environmental pollution, wealth disparity and other problems.<br><br>
-								The world is on the brink of peril. Shall we live in harmony with the world around us?
-								What is the future of human wellbeing? What role can education play? Mandela said:
-								“Education is the most powerful weapon which you can use to change the world.” Education
-								is the hope of the future. The destiny of all human beings in the future is decided by
-								today's education. In 2040, in their 30s, the current primary and secondary school
-								students will be the pillars of our society. <br><br>
-								On the other hand, progress of digital technology, such as metaverse and artificial
-								companions, accelerates, with its impacts in the next 10 years several times as that of
-								last 10 years’. Designing future education is designing the future world.<br><br>
-								In 2006, 17 international researchers, mainly from Asia, Europe, and North America,
-								published a paper on the concept of seamless learning that holistically describes future
-								learning environment (Chan et al., 2006). Seamless learning is based on three other
-								concepts: (1) one-to-one (1:1) technology enhanced learning, (2) learning scenarios, and
-								(3) seamless learning space. Seamless learning spells out the continuality of learning
-								experience while students switching from one scenario to another easily and quickly.
-								Subsequently, the concept triggered abundant research (Looi et al., 2010; Wong & Looi,
-								2011).<br><br>
-								Starting from 2018, 12 years after the publication of seamless learning concept, 23
-								Asian researchers collaborated and published a series of papers on Interest-Driven
-								Creator Theory (IDC Theory) (Chan et al., 2018; Chan et al., 2019; Wong et al., 2020;
-								Chen et al., 2020). This effort stemmed from the fact that a considerable part of Asian
-								education remains examination-driven. The overemphasis on examination outcome distorts
-								the processes of learning and teaching, ruinate students’ interest in learning,
-								undermine the need of developing twenty-first century competencies, and fails to prepare
-								our next generation to face the future unpredictable world. Yet, high-stakes
-								examinations will not disappear in the foreseeable future. To lessen their drawbacks and
-								guide the design of future learning, IDC Theory is developed.<br><br>
-								Seamless learning speaks of future technology supported learning environment while IDC
-								Theory focuses on learning activity design. It is noticeable that integration of them
-								will simply form a theory about continuity of IDC-based learning in the future seamless
-								learning space, and we shall call this Seamless IDC Theory (or SIDC Theory).<br><br>
-
-								This talk intends to call for establishing SIDC Theory through collective endeavor by
-								interested researchers. Besides, this talk also raises questions to be considered in
-								building the theory:<br><br>
-								1. How to develop a broad framework of SIDC Theory that can capture critical elements of
-								the theory?<br><br>
-								2. Will there be extension of seamless learning per se as well as that of IDC Theory per
-								se in view of SIDC Theory and the digital future?<br><br>
-								3. What is the ‘global educational goal’ that educators around the world should strive
-								for? If so, will SIDC-based learning (or SIDC learning) contribute to the global
-								educational goal?<br><br>
-								4. In the ‘seamless world’ of the digital future, will there be SIDC work, SIDC family
-								life, SIDC entertainment, and so forth, besides SIDC learning? Or will there be SIDC
-								daily life?<br><br>
-								Besides, this talk will also discuss some implications of SIDC Theory to MetaACES
-								research.
-							</h6> -->
+							<h5><strong>Abstract</strong></h5>
+							<h6 class="morespace" style="text-align: justify;">In 1988, I proposed the concept of AI companions for learning and developed a prototype of it. Today, AI is seen as a potential threat to human beings. In fact, humanity is facing unprecedented challenges—millions of lives lost to COVID-19, climate change, resource depletion, environmental pollution, and wealth disparity. Furthermore, the escalation of global conflicts raises concerns about the possibility of a nuclear apocalypse and World War III. The world is teetering on the brink of peril. We must ask: What is the very reason for the existence of the human knowledge and technologies we have created? What is the meaning of going to school? What is education? However, researchers in our field have long been focusing on how students learn and what they learn, but not why they learn. The resurgence of AI, particularly AI companions, therefore, must be able to guide us from how we learned and what we knew in the past to how we’ll learn and what we need to know in the future. Much more important is that we must adopt Global Harwell (a term combining harmony and wellbeing) as a shared global educational goal and build AI companions to assist in achieving this goal. This talk is based on a series of nascent thoughts on AI learning companions developed with my colleagues in Taiwan, as well as on the Global Harwell Goal in collaboration with international researchers.
+							</h6>
 							<div class="separator"></div>
 
 
