--- a/keynote.html
+++ b/keynote.html
@@ -143,7 +143,7 @@
 							<a href="#1"><img src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
 									width="120" height="120" />
 								<div class="org-name">Prof. Tak-Wai Chan</div>
-								<div class="org-uni">National Chair Professor,<br> National Central University, Taiwan
+								<div class="org-uni">Chair Professor,<br> National Central University, Taiwan
 								</div>
 							</a>
 
@@ -192,12 +192,7 @@
 										width="178" /></span><br>&nbsp;<br>
 								<h5>Speaker Bio
 							</strong></h5>
-							Tak-Wai Chan is Chair Professor of the Graduate Institute of Network Learning Technology at
-							National Central University in Taiwan. He has worked on various areas of digital technology
-							supported learning, including artificial intelligence in education, computer supported
-							collaborative learning, digital classrooms, online learning communities, mobile and
-							ubiquitous learning, digital game based learning, and, most recently, technology supported
-							mathematics and language arts learning.
+							Professor Tak-Wai Chan is a visionary. In 1988, he published his PhD thesis on AI learning companions, a groundbreaking research on AI in education (AIED). After completing his PhD in the USA in 1989, he worked on a series of network learning research projects at National Central University. Together with his colleagues, he developed the first dedicated network learning system in the world to support collaborative learning and competitive game-based learning, published in 1992. He launched the world's largest online learning community, EduCities, in 2000. He has been at the forefront of research on intelligent classrooms, one-to-one technology-enhanced learning, and mobile learning, and proposed the notion of Seamless Learning in 2006. To support the long-term transformation of Asian education from examination-driven to interest and creation-driven, he developed the Interest-Driven Creator (IDC) Theory with Asian scholars in 2018. Currently, he promotes Global Harmony and Wellbeing (Global Harwell) as a shared Global Educational Goal. Professor Chan was a key co-founder of the Asia-Pacific Society for Computers in Education (APSCE) and the Global Chinese Society for Computers in Education (GCSCE). These societies organize annual conference series ICCEs and GCCCEs and publish their official journals. He also founded the Association of Reading for Tomorrow and a mini experimental elementary school in Taiwan.
 							<div class="separator"></div>
 
 							<h5><strong>Abstract</strong></h5>
