--- a/about-us.html
+++ b/about-us.html
@@ -84,7 +84,7 @@
             </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
-								<li><a href="agenda.html">Proceedings (TBD)</a> </li>
+								<li><a href="proceedings.html">Proceedings</a> </li>
 								<li><a href="keynote.html">keynote</a> </li>
 								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
 								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
