--- a/location.html
+++ b/location.html
@@ -61,7 +61,7 @@ jQuery(document).ready(function(){
             </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
-								<li><a href="agenda.html">Proceedings (TBD)</a> </li>
+								<li><a href="proceedings.html">Proceedings</a> </li>
 								<li><a href="keynote.html">keynote</a> </li>
 								<li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
 								<li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
