--- a/proceedings.html
+++ b/proceedings.html
@@ -65,7 +65,7 @@
             </li>
             <li><a href="agenda.html">Programme</a>
               <ul>
-                <li><a href="agenda.html">Proceedings (TBD)</a> </li>
+                <li><a href="proceedings.html">Proceedings</a> </li>
                 <li><a href="keynote.html">keynote</a> </li>
                 <li><a href="presenterGuildline.html">Guidelines for presenters</a> </li>
                 <li><a href="chairGuildline.html">Guidelines for Track Chairs & Co-Chairs</a> </li>
@@ -92,7 +92,7 @@
       <div id="header" class="innerpage">
         <div class="shadow"></div>
         <div class="container940">
-          <h1 class="pagetitle">programme</h1>
+          <h1 class="pagetitle">Proceedings</h1>
           <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society
           </div>
           <div class="clear"></div><!-- clear float -->
