--- a/panel2.html
+++ b/panel2.html
@@ -154,6 +154,15 @@
             </div>
             <div class="small separator"></div>
             <p class="enlarged-text"></p>
+            <h3><strong>Panelist 4: Yin-Yang</strong></h3>
+            <div>
+              <img src="image/org/yin-yang.jpeg" alt="" class="alignleft frame" width="120" height="120" />
+              <h3><strong>
+                  <div style="color:purple">The Education University of Hong Kong, Hong Kong
+                </strong></h3>
+            </div>
+            <div class="small separator"></div>
+            <p class="enlarged-text"></p>
 
             <div class="clear"></div><!-- clear float -->
           </div><!-- end #maincontent -->
