--- a/location.html
+++ b/location.html
@@ -78,6 +78,7 @@ jQuery(document).ready(function(){
                 <li><a href="https://eng.taiwan.net.tw/m1.aspx?sNo=0002107" target="_blank" style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
               </ul>
             </li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
        	  <!-- #topnav -->
    	    </div>
