--- a/teacherForum.html
+++ b/teacherForum.html
@@ -84,6 +84,7 @@
                                         style="display: block;" class="current">TRAVEL INFORMATION</a> </li>
                             </ul>
                         </li>
+                        <li><a href="gallery.html">Gallery</a></li>
                     </ul>
                     <!-- #topnav -->
                 </div>
