--- a/about-us.html
+++ b/about-us.html
@@ -103,6 +103,7 @@
                     class="current">TRAVEL INFORMATION</a> </li>
               </ul>
             </li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
           <!-- #topnav -->
         </div>
