--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     class="current">TRAVEL INFORMATION</a> </li>
               </ul>
             </li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
           <!-- #topnav -->
         </div>
