--- a/transportation.html
+++ b/transportation.html
@@ -84,6 +84,7 @@
                     class="current">TRAVEL INFORMATION</a> </li>
               </ul>
             </li>
+            <li><a href="gallery.html">Gallery</a></li>
           </ul>
           <!-- #topnav -->
         </div>
