--- a/gallery.html
+++ b/gallery.html
@@ -119,6 +119,8 @@
           <div style="float: left; padding-right: 25px;">
             <h1>photo gallery</h1>
             <h1><a href="https://drive.google.com/drive/folders/1SCZYkCq4Apj53QxX0tfKejnUeMHnGIna?usp=sharing">Day 1</a></h1>
+            <h1><a href="https://drive.google.com/drive/folders/1EyzSPEcK4UMuXFqA1f34uE-E4mrP9OOW">Day 2</a></h1>
+            <h1><a href="https://drive.google.com/drive/folders/1RvMKKCAygbMHPeQESWx1-x3E4U4bueoe">banguet</a></h1>
             <!-- <div class="gallery" id="gallery"></div> -->
           </div>
           <div class="clear"></div>
