--- a/gallery.html
+++ b/gallery.html
@@ -120,7 +120,8 @@
             <h1>photo gallery</h1>
             <h1><a href="https://drive.google.com/drive/folders/1SCZYkCq4Apj53QxX0tfKejnUeMHnGIna?usp=sharing">Day 1</a></h1>
             <h1><a href="https://drive.google.com/drive/folders/1EyzSPEcK4UMuXFqA1f34uE-E4mrP9OOW">Day 2</a></h1>
-            <h1><a href="https://drive.google.com/drive/folders/1RvMKKCAygbMHPeQESWx1-x3E4U4bueoe">banguet</a></h1>
+            <h1><a href="https://drive.google.com/drive/folders/1RvMKKCAygbMHPeQESWx1-x3E4U4bueoe">banquet</a></h1>
+            <h1><a href="https://drive.google.com/drive/folders/1p_e8mbPq2a6jqH4RwkyafpZJZAryMlEt">Day 3</a></h1>
             <!-- <div class="gallery" id="gallery"></div> -->
           </div>
           <div class="clear"></div>
