--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
       <div id="header" class="innerpage">
         <div class="shadow"></div>
         <div class="container940">
-          <h1 class="pagetitle">Venue</h1>
+          <h1 class="pagetitle">Gallery</h1>
           <div class="pagedesc">The 2nd International Conference on Metaverse and AI Companions in Education and Society
           </div>
           <div class="clear"></div>
